# portingSources

./: Makefile  README.md
ACE/: Makefile
ACE/ACE_wrappers/: ACE_vc12.sln  ACE_vc14.sln  ACE_vs2017.sln  ACE_wrappers_vc12.sln  ACE_wrappers_vc14.sln  ACE_wrappers_vs2017.sln  GNUmakefile
bftpd/: Makefile
bftpd/bftpd-4.4/: Makefile  bftpd.conf  commands.c  login.c  main.c  options.c
buildroot/: Makefile
busybox/: Makefile
cJSON/: Makefile
cairo/: Makefile
coreutils/: Makefile
eXosip/: Makefile
eudev/: Makefile
expat/: Makefile
ffmpeg/: Makefile
fftw/: Makefile
fontconfig/: Makefile
freetype/: Makefile
gdb/: Makefile
imagemagick/: Makefile
iperf/: Makefile
iperf/iperf-2.0.12/src/: Client.cpp  Launch.cpp  Listener.cpp  Locale.c  Makefile.am  Makefile.in  PerfSocket.cpp  ReportDefault.c  Reporter.c  Server.cpp  Settings.cpp  histogram.c  ioctls.c  stdio.c
jpeg/: Makefile
libarchive/: Makefile
libevent/: Makefile
libi2c/: Makefile
libiconv/: Makefile
libpcap/: Makefile
libpng/: Makefile
libuuid/: Makefile
libx264/: Makefile
libxml2/: Makefile
libxvid/: Makefile
live555/: Makefile
lzo/: Makefile
mp4v2/: Makefile
mtd-utils/: Makefile
ncurses/: Makefile
nmealib/: Makefile
opencv/: Makefile
openssl/: Makefile
osd/: Makefile
osd/swosd/: Makefile
osip2/: Makefile
pixman/: Makefile
readline/: Makefile
strace/: Makefile
tcpdump/: Makefile
upgrade-server/: Makefile
v4l-utils/: Makefile
valgrind/: .Makefile.swp  Makefile
watchdog/: Makefile
xz/: Makefile
yasm/: Makefile
zlib/: Makefile
(+18755 files in other folders)
